--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/frontend/src/assets/img/argentBankLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script
       src="https://kit.fontawesome.com/16ae0561bb.js"
       crossorigin="anonymous"
     ></script>
 
-    <title>React App</title>
+    <title>Argent Bank</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
